--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,9 +25,9 @@
   ansible.builtin.assert:
     that:
       - ansible_facts['distribution'] == 'Ubuntu'
-      - ansible_facts['distribution_version'] == '22.04'
-    fail_msg: "Supports Ubuntu versions 22.04. Detected: {{ ansible_facts['distribution'] }} {{ ansible_facts['distribution_version'] }}."
-    success_msg: "Running on Ubuntu {{ ansible_facts['distribution_version'] }}."
+      - ansible_facts['distribution_major_version'] in ['22', '24']
+    fail_msg: "Supports Ubuntu versions 22 and 24. Detected: {{ ansible_facts['distribution'] }} {{ ansible_facts['distribution_major_version'] }}."
+    success_msg: "Running on Ubuntu {{ ansible_facts['distribution_major_version'] }}."
 
 - name: Ensure apt cache is up-to-date
   ansible.builtin.apt:
@@ -49,25 +49,16 @@
   ansible.builtin.apt:
     update_cache: true
 
-- name: Pin package versions prior to installation
-  ansible.builtin.set_fact:
-    package_versions:
-      ubuntu:
-        docker-ce: "docker-ce=5:28.3.3-1~ubuntu.22.04~jammy"
-        docker-ce-cli: "docker-ce-cli=5:28.3.3-1~ubuntu.22.04~jammy"
-        containerd.io: "containerd.io=1.7.27-1"
-        docker-compose-plugin: "docker-compose-plugin=2.39.1-1~ubuntu.22.04~jammy"
-
 - name: Install Docker packages
   ansible.builtin.apt:
     name: "{{ item }}"
     state: present
-    allow_downgrade: true
+    allow_downgrade: false
   loop:
-    - "{{ package_versions['ubuntu']['docker-ce'] }}"
-    - "{{ package_versions['ubuntu']['docker-ce-cli'] }}"
-    - "{{ package_versions['ubuntu']['containerd.io'] }}"
-    - "{{ package_versions['ubuntu']['docker-compose-plugin'] }}"
+    - docker-ce
+    - docker-ce-cli
+    - containerd.io
+    - docker-compose-plugin
 
 - name: Ensure docker service is enabled and started
   ansible.builtin.systemd:
@@ -124,3 +115,16 @@
   ansible.builtin.debug:
     msg:
       - "OpenStack Security Group: '{{ os_security_group_name }}'"
+
+- name: Temporary setup Trivy for SBOM auto-generation (standalone binary file at /tmp/trivy)
+  ansible.builtin.shell:
+    cmd: |
+      set -o pipefail
+      curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /tmp
+    creates: /tmp/trivy
+
+- name: Auto-generate SBOM (SPDX file at /sbom.json)
+  ansible.builtin.command:
+    cmd: ./trivy rootfs --pkg-types os --format spdx-json --output /sbom.json --scanners vuln /
+    chdir: /tmp
+  changed_when: true
